--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# assets
-*.pdf
+# images
+images/*
 *.png
 *.gif
 *.jpg
 *.jpeg
-*.zip
+*.svg
+
+# assets
+*.pdf
+*.txt
 *.csv
 *.xls
-*.svg
+*.ppt
 *.mp3
+*.wmv
+*.zip
 
 # exec
 *.exe
