--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# images
-images/*
-*.png
-*.gif
-*.jpg
-*.jpeg
-*.svg
+# modules
+node_modules/
+
+# logs
+/log
+*.log
 
 # assets
 *.pdf
@@ -23,6 +22,7 @@ images/*
 *.backup
 *.lck
 *.config
+*.log
 
 # reports
 **/reports/**
