update package, add shrinkwrap

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "HHS OIG Website",
   "main": "index.js",
   "scripts": {
+	"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nci-ats/hhs-oig-web-asp.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "NCI",
+  "license": "CC0-1.0",
   "bugs": {
     "url": "https://github.com/nci-ats/hhs-oig-web-asp/issues"
   },
