--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
 	"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=6.9.x",
+    "npm": ">=3.10.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nci-ats/hhs-oig-web-asp.git"
