--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gulp"
   },
   "engines": {
     "node": ">=6.9.x",
@@ -31,5 +32,9 @@
     "helmet": "^3.5.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.8.1"
+  },
+  "devDependencies": {
+    "del": "^2.2.2",
+    "gulp": "^3.9.1"
   }
 }
