remove unneeded install, add all branches true deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ cache:
 before_script:
   - npm install -g gulp
 script:
-  - npm install
   - npm run build
 deploy:
   provider: s3
@@ -19,3 +18,6 @@ deploy:
   bucket: bucketeer-43061060-5d3e-4179-9d24-f43a1f2b1cbf
   local-dir: assets
   acl: public_read
+  on:
+    repo: nci-ats/hhs-oig-web-asp
+    all_branches: true
