--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "devDependencies": {
     "del": "^2.2.2",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-ignore": "^2.0.2",
+    "gulp-size": "^2.1.0"
   }
 }
