--- a/.gitignore
+++ b/.gitignore
@@ -18,26 +18,12 @@ node_modules/
 *.wmv
 *.zip
 
-!assets/pdf/about-oig/**
-!assets/pdf/authorities/**
-!assets/pdf/career/**
-!assets/pdf/compliance/**
-!assets/pdf/conference/**
-!assets/pdf/exclusions/**
-!assets/pdf/faqs/**
-!assets/pdf/foia/**
-!assets/pdf/forms/**
-!assets/pdf/guidance/**
-!assets/pdf/heat/**
-!assets/pdf/newsroom/**
-!assets/pdf/organization/**
-!assets/pdf/publications/**
-!assets/pdf/reports-and-publications/**
-!assets/pdf/testimony/**
 !assets/txt/**
 !assets/csv/**
 !assets/xls/**
 !assets/ppt/**
+
+.awspublish*
 
 # exec
 *.exe
