--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-awspublish": "^3.3.0",
     "gulp-ignore": "^2.0.2",
-    "gulp-size": "^2.1.0"
+    "gulp-rename": "^1.2.2"
   }
 }
